--- a/index.html
+++ b/index.html
@@ -313,31 +313,31 @@
                 <i class="fas fa-dumbbell"></i>
                 <h2>رياضة</h2>
             </a>
-        <a href="lawyer9-details.html" class="category" data-category="فنادق">
+        <a href="lawyer10details.html" class="category" data-category="فنادق">
                     <i class="fas fa-hotel"></i>
                     <h2>فنادق</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="أيادي عاملة">
+                <a href="lawyer10details.html" class="category" data-category="أيادي عاملة">
                     <i class="fas fa-hands-helping"></i>
                     <h2>أيادي عاملة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="سيارات أجرة">
+                <a href="lawyer10details.html" class="category" data-category="سيارات أجرة">
                     <i class="fas fa-taxi"></i>
                     <h2>سيارات أجرة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="تكاتك أجرة">
+                <a href="lawyer10details.html" class="category" data-category="تكاتك أجرة">
                     <i class="fas fa-motorcycle"></i>
                     <h2>تكاتك أجرة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="مرطبات">
+                <a href="lawyer10details.html" class="category" data-category="مرطبات">
                     <i class="fas fa-glass-cheers"></i>
                     <h2>مرطبات</h2>
                 </a>
                 <a href="lawyer9-details.html" class="category" data-category="وجبات سريعة">
-                    <i class="fas fa-hamburger"></i>
+                    <i class="lawyer10 fa-hamburger"></i>
                     <h2>وجبات سريعة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="صالونات">
+                <a href="lawyer10details.html" class="category" data-category="صالونات">
                     <i class="fas fa-cut"></i>
                     <h2>صالونات</h2>
                 </a>
@@ -345,75 +345,75 @@
                     <i class="fas fa-tshirt"></i>
                     <h2>بدلات أعراس</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="ملابس">
+                <a href="lawyer10detailsdetails.html" class="category" data-category="ملابس">
                     <i class="fas fa-shopping-bag"></i>
                     <h2>ملابس</h2>
                 </a>
-                <a href=" lawyer9-details.html" class="category" data-category="مولات">
+                <a href=" lawyer10details.html" class="category" data-category="مولات">
                     <i class="fas fa-shopping-cart"></i>
                     <h2>مولات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="أجهزة كهربائية">
+                <a href="lawyer10details.html" class="category" data-category="أجهزة كهربائية">
                     <i class="fas fa-blender"></i>
                     <h2>أجهزة كهربائية</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="موبايلات">
+                <a href="lawyer10details.html" class="category" data-category="موبايلات">
                     <i class="fas fa-mobile-alt"></i>
                     <h2>موبايلات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="ساعات">
+                <a href="lawyer10details.html" class="category" data-category="ساعات">
                     <i class="fas fa-clock"></i>
                     <h2>ساعات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="إكسسوارات">
+                <a href="lawyer10details.html" class="category" data-category="إكسسوارات">
                     <i class="fas fa-gem"></i>
                     <h2>إكسسوارات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="مفروشات">
+                <a href="lawyer10details.html" class="category" data-category="مفروشات">
                     <i class="fas fa-couch"></i>
                     <h2>مفروشات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="إلكترونيات">
+                <a href="lawyer10details.html" class="category" data-category="إلكترونيات">
                     <i class="fas fa-laptop"></i>
                     <h2>إلكترونيات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="صيدليات">
+                <a href="lawyer10details.html" class="category" data-category="صيدليات">
                     <i class="fas fa-pills"></i>
                     <h2>صيدليات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="جامعات">
+                <a href="lawyer10details.html" class="category" data-category="جامعات">
                     <i class="fas fa-university"></i>
                     <h2>جامعات</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="مدارس خاصة">
+                <a href="lawyer10details.html" class="category" data-category="مدارس خاصة">
                     <i class="fas fa-school"></i>
                     <h2>مدارس خاصة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="تذاكر سفر">
+                <a href="lawyer10details.html" class="category" data-category="تذاكر سفر">
                     <i class="fas fa-ticket-alt"></i>
                     <h2>تذاكر سفر</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="مدرسين">
+                <a href="lawyer10details.html" class="category" data-category="مدرسين">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <h2>مدرسين</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="أدوات حلاقة">
+                <a href="lawyer10details.html" class="category" data-category="أدوات حلاقة">
                     <i class="fas fa-cut"></i>
                     <h2>أدوات حلاقة</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="دراجات نارية">
+                <a href="lawyer10details.html" class="category" data-category="دراجات نارية">
                     <i class="fas fa-motorcycle"></i>
                     <h2>دراجات نارية</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="ملابس عسكرية">
+                <a href="lawyer10details.html" class="category" data-category="ملابس عسكرية">
                     <i class="fas fa-shield-alt"></i>
                     <h2>ملابس عسكرية</h2>
                 </a>
-                <a href="lab-tools.html" class="category" data-category="أدوات مختبر">
+                <a href="lawyer10details.html" class="category" data-category="أدوات مختبر">
                     <i class="fas fa-vial"></i>
                     <h2>أدوات مختبر</h2>
                 </a>
-                <a href="lawyer9-details.html" class="category" data-category="عيادات">
+                <a href="lawyer10details.html" class="category" data-category="عيادات">
                     <i class="fas fa-clinic-medical"></i>
                     <h2>عيادات</h2>
                 </a>
