--- a/index.html
+++ b/index.html
@@ -332,9 +332,8 @@
                 <a href="lawyer10details.html" class="category" data-category="مرطبات">
                     <i class="fas fa-glass-cheers"></i>
                     <h2>مرطبات</h2>
-                </a>
-                <a href="lawyer9-details.html" class="category" data-category="وجبات سريعة">
-                    <i class="lawyer10 fa-hamburger"></i>
+                 <a href="lawyer10-details.html" class="category" data-category="وجبات سريعة">
+                    <i class="fas fa-hamburger"></i>
                     <h2>وجبات سريعة</h2>
                 </a>
                 <a href="lawyer10details.html" class="category" data-category="صالونات">
